css/arkusz.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
/* moje */

body {
	background-image: url(../img/drzewo.jpg);
	background-repeat: no-repeat;
	background-size: cover;
	background-color: #dcdcdc;
	padding-top: 95px;
	font-size: 16px;
}


#content {
	max-width: 1170px;
	margin: 0 auto;
}

.navbar-right {
	margin-right: 0;
}

p, h2 {
	font-family: Garamond, Georgia, serif;
}
h2 {
	font-weight: bold;
	color:#000;
	font-size: 1.3em;
	padding-bottom: 5px;
}
.navbar {
	background-color: #191919;
	border-color: #191919;
	opacity: 0.9;
}
@media (min-width: 1200px) {
	.navbar {
		height:50px;
	}
}
@media (max-width: 767px) {
	.navbar {
		opacity: 1;
	}
}
.navbar-fixed-bottom .navbar-collapse,
.navbar-fixed-top .navbar-collapse {
	max-height: 390px; }
	
.navbar-default .navbar-brand,
.navbar-default .navbar-nav > li > a {
	color: #fff;
	padding: 5px 20px 0px 30px;
}
.navbar-default .navbar-brand {
	padding-top: 13px;
}
.navbar-default .navbar-nav li a {
	line-height: 40px;
	padding-left: 20px;
	text-align: center;
}
@media (min-width: 740px) and (max-width: 1200px) {
	.navbar-default .navbar-nav li a {
	padding-left: 10px;
}
}
@media (max-width: 767px) {
	.navbar-default .navbar-nav li a {
	line-height: 50px;
}
}
@media(min-width: 768px) {
	.navbar-default .navbar-nav li:nth-child(1) a,
	.navbar-default .navbar-nav li:nth-child(2) a,
	.navbar-default .navbar-nav li:nth-child(5) a {
			line-height: 20px;
	}
}
@media(min-width: 768px) and (max-width: 1198px) {
	.headerAnchor span {
		display: block;
	}
}

a#brand:hover {
	color: #fff;
}
.navbar-default .navbar-nav > li > a:hover {
	color: #fff;
	text-shadow: -5px -5px 5px #000;
}
.navbar-nav li {
	width: 14.28%;
    height: 55px;
    background: -moz-radial-gradient(left top, #1f331f,#5C995C);
    background: -webkit-radial-gradient(left top, #1f331f,#5C995C);
    background: -ms-radial-gradient(left top, #1f331f,#5C995C);
    background: radial-gradient(left top, #1f331f,#5C995C);
    border-radius: 5% 20%; 
}

@media (min-width: 768px) and (max-width: 853px) {
	.navbar-default .navbar-nav li a {
		padding-left: 0;
		padding-right: 0;
	}
}

@media (max-width: 767px) {
	.navbar-nav li {
		max-width: 100%;
		width: 100%;
	}
}

#navbarTop {
	max-width: 1170px;
	padding: 0px;
	margin: 0 auto 50px;
}
@media(min-width: 1200px) {
	#navbarTop {
		width: 100%;
	}
}
@media(min-width: 768px) and (max-width: 1199px) {
	#navbarTop {
		text-align:center;
	}
	.navbar-header {
		float: none;
	}
	.navbar-brand {
		float: none;
		padding-left: 0;
		display: inline-block;
	}
	ul.navbar-collapse.collapse {
		width: 100%;
	}
}
@media(max-width: 1199px) {
	#navbarTop {
		margin: 0 15px 50px;
	}
}

#data, #aspirations, 
#qualifications, #portfolio, 
#experience, #education,
#skills {
	padding: 40px 130px;
}

#aspirations, #qualifications, #education
 {
	padding: 40px 130px 0px;
}

@media (max-width: 700px) {
   #data, #aspirations, 
   #qualifications, #portfolio, 
   #experience, #education,
   #skills {
  	padding: 40px 20px;
  }
}

p,
#skills li {
	font-size: 1.2em;
	padding: 5px 0 2px;
}
#data {
	background-color: #2E4C2E;
	color: #F8F8F8;
}
#aspirations, #qualifications, #portfolio,
#education, #skills {
	background-color: #000;
	color: #FFF5EE;
	opacity: 0.9;
}
#experience {
	background-color: #99C199;
}
.italic {
	font-style: italic;
}
#aspirations h2, #qualifications h2, #portfolio h2,
#education h2, #skills h2
 {
    color: #2E4C2E;
    font-size: 1.4em;
}

#skills ul:first-of-type {
	margin-bottom: 20px;
}
.job {
	background-color: #E6F0E6;
	padding: 20px 50px 30px;
	margin-top: 2%;
}


.nav-tabs li a {
	color: #001400;
	font-size: 1.1em;
}
p.italic {
	padding-bottom: 15px;
	font-weight: bold;
}
.nav-tabs li a:hover,
.nav-tabs li.active a,
.nav-tabs li.active a:hover,
.nav-tabs li.active a:focus
{
	background-color: #E6F0E6;
}
.nav-tabs li.active a:focus {
	color:#000;
}
.footer {
	margin: 50px 0 80px;
	text-align: right;
}
.footer .container p {
	color: #ffffff;
	font-size: 1em;
	line-height: 200%;
}

#experience, #data, #portfolio {
	margin-bottom: 50px;

}

